// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayHeading can be inverted 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  word-wrap: break-word;
  font-weight: 300;
  color: #fff;
  font-size: 2.75rem;
  line-height: 1.09;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.c0 sup {
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
  font-size: 1.25rem;
  top: -1.2em;
}

@media (min-width:768px) {
  .c0 {
    font-size: 4.5rem;
    line-height: 1.11;
  }
}

@media (min-width:768px) {
  .c0 sup {
    top: -2.2em;
  }
}

<h1
  class="c0"
>
  The heading
</h1>
`;

exports[`DisplayHeading renders 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  word-wrap: break-word;
  font-weight: 300;
  color: #4b286d;
  font-size: 2.75rem;
  line-height: 1.09;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.c0 sup {
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
  font-size: 1.25rem;
  top: -1.2em;
}

@media (min-width:768px) {
  .c0 {
    font-size: 4.5rem;
    line-height: 1.11;
  }
}

@media (min-width:768px) {
  .c0 sup {
    top: -2.2em;
  }
}

<h1
  class="c0"
>
  The heading
</h1>
`;
